--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "book/website"
+  base = "dsg"
   command = "pip install -r requirements.txt && jupyter-book build ."
   publish = "dsg/_build/html"
 
