--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "dsg"
-  command = "pip install -r requirements.txt && jupyter-book build ."
+  command = "source /opt/buildhome/python3.7/bin/activate && pip install -r requirements.txt && jupyter-book build ."
   publish = "_build/html"
 
 # Do not build deploy previews for branches from all-contributors bot
