--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "."
-  command = "pip install -r requirements.txt && jupyter-book build mynewbook && python -m main build mynewbook"
-  publish = "mynewbook/website/_build/html"
+  base = "mynewbook"
+  command = "pip install -r requirements.txt && jupyter-book build . && python -m main build ."
+  publish = "_build/html"
