Set folder to main

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "dsg"
+  base = "main"
   command = "pip install -r requirements.txt && jupyter-book build ."
   publish = "_build/html"
 
