--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "master"
-  command = "pip install -r requirements.txt && jupyter-book build . && python ../main.py build ."
+  command = "pip install -r requirements.txt && jupyter-book build ."
   publish = "_build/html"
 
 [build-profile]
