--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -1,5 +1,18 @@
-DSG:
+dsg:
   - welcome
   - communication/communication
   - communication/comms-overview
   - communication/comms-overview/comms-overview-principles
+enrichment:
+  - welcome
+  - reproducible-research/reproducible-research
+  - reproducible-research/overview
+  - reproducible-research/overview/overview-definitions
+group-leader:
+  - welcome
+  - project-design/project-design
+  - project-design/pd-overview
+  - project-design/pd-overview/pd-overview-planning
+  - project-design/pd-overview/pd-overview-repro
+  - project-design/pd-overview/pd-overview-methods
+  - project-design/pd-overview/pd-overview-version
