editions to pathway

--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -8,3 +8,11 @@ enrichment:
   - reproducible-research/reproducible-research
   - reproducible-research/overview
   - reproducible-research/overview/overview-definitions
+group-leader:
+  - welcome
+  - project-design/project-design
+  - project-design/pd-overview
+  - project-design/pd-overview/pd-overview-planning
+  - project-design/pd-overview/pd-overview-repro
+  - project-design/pd-overview/pd-overview-methods
+  - project-design/pd-overview/pd-overview-version
