--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "master"
-  command = "pip install -r requirements.txt && python ../main.py build ."
-  publish = "_build/html"
+  base = "."
+  command = "pip install -r master/requirements.txt && python main.py build master"
+  publish = "master/_build/html"
 
 # Do not build deploy previews for branches from all-contributors bot
 [context.deploy-preview]
@@ -216,6 +216,3 @@ fi
   # The default HTTP status code is 301, but you can define a different one.
   status = 301
   force = true
-
-
-
