Update profile to match new data structure

--- a/mynewbook/profiles.yml
+++ b/mynewbook/profiles.yml
@@ -1,9 +1,6 @@
-Enrichment:
-  - intro
-  - subfolder/mymarkdownfile
-  - markdown
-DSG:
-  - intro
-  - some/thing
-  - markdown
-
+- name: Enrichment
+  files:
+    - intro
+    - subfolder/mymarkdownfile
+    - markdown
+  colour: brown
