--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -15,6 +15,12 @@
 - name: group-leader
   files:
     - welcome
+    - communication/communication
+    - communication/comms-overview
+    - communication/comms-overview/comms-overview-principles
+    - reproducible-research/reproducible-research
+    - reproducible-research/overview
+    - reproducible-research/overview/overview-definitions
     - project-design/project-design
     - project-design/pd-overview
     - project-design/pd-overview/pd-overview-planning
