--- a/.gitignore
+++ b/.gitignore
@@ -129,13 +129,8 @@ dmypy.json
 .pyre/
 
 # netlify
-/dsg/_build/
-/master/_build/
-/master_DSG/
-/master/_DSG/
-/mynewbook/_build/
-/mynewbook_DSG/
-/mynewbook_enrichment/
+/master_copy/
+/mynewbook_copy/
 
 # vscode stuff
  dsg/.DS_Store
