--- a/pathways/pyproject.toml
+++ b/pathways/pyproject.toml
@@ -12,6 +12,7 @@ PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.2"
+pylint = "^2.12.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
