--- a/pathways/pyproject.toml
+++ b/pathways/pyproject.toml
@@ -13,6 +13,7 @@ PyYAML = "^6.0"
 [tool.poetry.dev-dependencies]
 coverage = "^6.2"
 pylint = "^2.12.2"
+pre-commit = "^2.16.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
