--- a/master/_config.yml
+++ b/master/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title                       : The Turing Way - Branch # The title of the book. Will be placed in the left navbar.
+title                       : The Turing Way - Persona # The title of the book. Will be placed in the left navbar.
 author                      : The Turing Way Community  # The author of the book
 copyright                   : "2020-2021"  # Copyright year to be placed in the footer
 logo                        : "./figures/logo/logo.jpg"  # A path to the book logo
