--- a/pathways/pyproject.toml
+++ b/pathways/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["Iain-S <25081046+Iain-S@users.noreply.github.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 mdutils = "^1.3.1"
-markdown-it-py = "^2.0.0"
 PyYAML = "^6.0"
+markdown-it-py = "0.6.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.2"
