--- a/pathways/pyproject.toml
+++ b/pathways/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Iain-S <25081046+Iain-S@users.noreply.github.com>"]
 python = "^3.8"
 mdutils = "^1.3.1"
 PyYAML = "^6.0"
-markdown-it-py = "0.6.0"
+markdown-it-py = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.2"
