--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -1,4 +1,4 @@
-- name: DSG
+- name: Data Study Group
   files:
     - reproducible-research/reproducible-research
     - reproducible-research/overview
@@ -12,7 +12,7 @@
     - collaboration/github-novice/github-novice-advanced
     - collaboration/leadership
   colour: white
-- name: Enrichment Students
+- name: PhD Students
   files:
     - communication/communication
     - communication/comms-overview
