--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -22,7 +22,7 @@
     - reproducible-research/reproducible-research
     - reproducible-research/overview
   colour: blue
-  description: In hac habitasse platea dictumst. Etiam euismod convallis diam, in tincidunt leo vehicula non. Sed euismod, lacus vitae efficitur auctor, enim tortor gravida tellus, eu fringilla tellus tellus id nulla. Praesent vitae arcu libero. Mauris pretium ligula a dolor placerat, in ultrices turpis venenatis. Quisque malesuada, metus vel pellentesque commodo, ipsum neque tincidunt augue, eget suscipit elit nunc nec elit.
+  description: PhD students are early career researchers who may not have a lot of hands on experience with contributing to research projects from the start to finish. This curated set of chapters will allow them to understand what practices apply to their research at different stages of development.
 
 - name: Group Leaders
   files:
