--- a/master/profiles.yml
+++ b/master/profiles.yml
@@ -12,7 +12,7 @@
     - collaboration/github-novice/github-novice-advanced
     - collaboration/leadership
   colour: white
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec mauris quis magna consequat consequat vel quis odio. Sed nec arcu malesuada, aliquam erat eget, bibendum nisi. Nunc varius, odio eu molestie euismod, sapien ipsum vulputate eros, sed lacinia nisl sapien eu nisi. Nulla facilisi. Nullam vulputate, odio sed tempor rutrum, est ipsum ultrices lorem, a feugiat velit magna in metus.
+  description: consectetur adipiscing elit. Sed nec mauris quis magna consequat consequat vel quis odio. Sed nec arcu malesuada, aliquam erat eget, bibendum nisi. Nunc varius, odio eu molestie euismod, sapien ipsum vulputate eros, sed lacinia nisl sapien eu nisi. Nulla facilisi. Nullam vulputate, odio sed tempor rutrum, est ipsum ultrices lorem, a feugiat velit magna in metus.
 
 - name: PhD Students
   files:
